--- a/branches/kalypso_11.06/KalypsoModelWspmPdbCore/.settings/org.eclipse.core.resources.prefs
+++ b/branches/kalypso_11.06/KalypsoModelWspmPdbCore/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
-#Mon Jul 18 16:47:59 CEST 2011
+#Thu Feb 09 12:46:34 CET 2012
 eclipse.preferences.version=1
 encoding//etc/scripts/update_V0.0.1_V0.0.2/oracle.sql=UTF-8
+encoding//etc/scripts/z_misc/update_3_stellen_f\u00FCr_rauheit_ks.sql=UTF-8
