--- a/KalypsoModelWspmTuhhCore/plugin.properties
+++ b/KalypsoModelWspmTuhhCore/plugin.properties
@@ -9,7 +9,7 @@ org.kalypso.model.wspm.tuhh.core.profile.FlussschlauchProfilePointFilter=River c
 org.kalypso.model.wspm.tuhh.core.profile.VorlandlinksProfilePointFilter.description=Profile points on the left foreland
 org.kalypso.model.wspm.tuhh.core.profile.FlussschlauchProfilePointFilter.description=Profile points inside the the main channel
 org.kalypso.model.wspm.tuhh.core.profile.VorlandrechtsProfilePointFilter=Right Foreland
-org.kalypso.model.wspm.tuhh.core.wspwin.prf.MultiPrfSink=directory to prf-Export
+org.kalypso.model.wspm.tuhh.core.wspwin.prf.MultiPrfSink=Directory for prf-Export
 org.kalypso.model.wspm.tuhh.profiletype=Pasche
 org.kalypso.model.wspm.tuhh.profiletype.description=Profile according to 1D-stationary central computation module of TUHH (by Prof. Pasche)
 org.kalypso.model.wspm.tuhh.core.profile.CsvSink=Comma Separated File (csv)
