Profile quick fixes have not been translated

--- a/KalypsoModelWspmTuhhUI/plugin.properties
+++ b/KalypsoModelWspmTuhhUI/plugin.properties
@@ -76,3 +76,12 @@ org.kalypso.model.wspm.tuhh.ui.wizards.WspWinExportGmlWizard.name=WspWin Project
 org.kalypso.model.wspm.tuhh.ui.wizards.NewProjectWizard=TUHH 1D-Water-Surface-Model Project
 org.kalypso.model.wspm.tuhh.ui.export.knauf.KnaufExportProfilesWizard.description=Converts selected profiles into the Knauf profile format.
 pasche.bewuchs=Vegetation
+
+org.kalypso.model.wspm.tuhh.ui.resolutions.AddBewuchsResolution.name = Add vegetation
+org.kalypso.model.wspm.tuhh.ui.resolutions.DelBewuchsResolution.name = Remove vegetation
+org.kalypso.model.wspm.tuhh.ui.resolutions.AddDeviderResolution.name = Add marker
+org.kalypso.model.wspm.tuhh.ui.resolutions.MoveDeviderResolution.name = Move marker
+org.kalypso.model.wspm.tuhh.ui.resolutions.EditPointResolution.name = Change values
+org.kalypso.model.wspm.tuhh.ui.resolutions.DelDeviderResolution.name = Remove marker
+org.kalypso.model.wspm.tuhh.ui.resolutions.DelRoughnessResolution.name = Remove roughness
+org.kalypso.model.wspm.tuhh.ui.resolutions.RemovePropertyResolution.name = Remove component
