Introduced new workflow task that calculates a grouped statistical table. User is asked for a shape file to group by.

--- a/KalypsoModelRisk/etc/workflow.properties
+++ b/KalypsoModelRisk/etc/workflow.properties
@@ -26,10 +26,11 @@ KalypsoRisk_Preprocessing_Databases_RiskZonesPanel_help=Risk-zones overview and 
 #Processing
 KalypsoRisk_Processing=Processing: Damage assessment
 KalypsoRisk_Processing_help=Damage Assessment: Calculating the potential damage and risk-zones 
-KalypsoRisk_Processing_DamagePotentialCalculationHandler=Calculating the potential damage
+KalypsoRisk_Processing_DamagePotentialCalculationHandler=Potential Damage Calculation
 KalypsoRisk_Processing_DamagePotentialCalculationHandler_help=Calculating the potential damage (HQi)
 KalypsoRisk_Processing_RiskZonesCalculationHandler=Flood Risk Assessment
 KalypsoRisk_Processing_RiskZonesCalculationHandler_help=Flood Risk Assessment: calculation of the risk-zones
+
 #Postprocessing
 KalypsoRisk_Postprocessing=Results Evaluation
 KalypsoRisk_Postprocessing_help=Evaluation of the results
