Introduced new workflow task that calculates a grouped statistical table. User is asked for a shape file to group by.

--- a/KalypsoModelRisk/plugin.properties
+++ b/KalypsoModelRisk/plugin.properties
@@ -5,3 +5,6 @@ org.kalypso.risk.project.KalypsoRiskDemoProjectWizard.name=Kalypso Risk Model - 
 org.kalypso.risk.project.KalypsoRiskDemoProjectWizard.description=Kalypso Risk Model - Demo project
 org.kalypso.risk.views.RiskStatisticsResultView.name=Risk Statistics View
 org.kalypso.risk.preferences.KalypsoRiskPreferencePage=Risk
+
+StatisticsCalculationHandler.name=Statistic Result Processing
+StatisticsCalculationHandler.description=Calculates the potential damages and flood risks per landuse 
