Fixed english translation of 'active' groups for steady/unsteady

--- a/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/schema/v0.0/sim_1d2d_control.properties
+++ b/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/schema/v0.0/sim_1d2d_control.properties
@@ -32,7 +32,7 @@ c1d2d_ControlModel_c1d2d_SWANVersion_tooltip=Select calculation engine by versio
 
 # steady settings
 # ---------------
-c1d2d_ControlModel_c1d2d__steady_label=Activate
+c1d2d_ControlModel_c1d2d__steady_label=Steady Calculation
 c1d2d_ControlModel_c1d2d__steady_tooltip=Activate Steady Calculation
 c1d2d_ControlModel_c1d2d__steadyBC_label=URFC
 c1d2d_ControlModel_c1d2d__steadyBC_tooltip=Under Relaxation Factor
@@ -61,7 +61,7 @@ c1d2d_ControlModel_c1d2d__steadyBC_1.0_tooltip=use only 100 percent of changes (
 
 # transient settings
 # ------------------
-c1d2d_ControlModel_c1d2d__unsteady_label=Activate
+c1d2d_ControlModel_c1d2d__unsteady_label=Unsteady Calculation
 c1d2d_ControlModel_c1d2d__unsteady_tooltip=Activate Transient Calculation
 c1d2d_ControlModel_c1d2d_NITN_label=Max No. of Iterations
 c1d2d_ControlModel_c1d2d_NITN_tooltip=Maximum No. of Iterations for Transient Calculations
