qsymmetry on 2d weirs added

--- a/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/schema/v0.0/sim_1d2d_model.properties
+++ b/KalypsoModel1D2D/src/org/kalypso/kalypsomodel1d2d/schema/v0.0/sim_1d2d_model.properties
@@ -10,6 +10,8 @@ wb1d2d_BridgeFlowRelation_label=Bridge Definition (1D)
 wb1d2d_BridgeFlowRelation_description=Bridge Flow Relation for a 1D Mesh
 wb1d2d_BridgeFlowRelation_wb1d2d_direction_label=Flow Direction
 wb1d2d_BridgeFlowRelation_wb1d2d_direction_tooltip=Nominal Flow Direction through the Bridge
+wb1d2d_WeirFlowRelation2D_wb1d2d_QSymmetry_label=Outflow symmetry
+wb1d2d_WeirFlowRelation2D_wb1d2d_QSymmetry_tooltip=Symmetrical flow patterns in both flow directions
 wb1d2d_BridgeFlowRelation_wb1d2d_kind_10_label=Tabular
 wb1d2d_BridgeFlowRelation_wb1d2d_kind_10_tooltip=10
 wb1d2d_BridgeFlowRelation_wb1d2d_kind_1_label=1
