Some work on new rrm workflow

--- a/KalypsoUIRRM/plugin.properties
+++ b/KalypsoUIRRM/plugin.properties
@@ -5,6 +5,12 @@ command.name.0 =Landuse
 command.name.1 = Pedology Data
 command.name.2 = Geology Data
 command.name.3 = Create Hydrotopes
+org.kalypso.model.rrm.modelConstruction.name=Model Construction
+org.kalypso.model.rrm.modelConstruction.description=Task for editing the basic model layout
+org.kalypso.model.rrm.editNetRelations.name=Edit Net Relations
+org.kalypso.model.rrm.editNetRelations.description=Edit the relation between model elements
+org.kalypso.model.rrm.editNetElements.name=Edit Net Elements
+org.kalypso.model.rrm.editNetElements.description=Edit the elements the model consists of
 NewWizard.name=KalypsoHydrology Model
 Category.name=Rainfall-Runoff Model
 
