--- a/trunk/KalypsoModelNA/etc/schema/gml/NAFortranLog.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/NAFortranLog.properties
@@ -2,12 +2,12 @@
 #Wed Aug 19 13:26:40 CEST 2009
 http___www.opengis.net_gml=gml
 http___www.tuhh.de_NAFortranLog=naLog
-naLog_LogMessage_description=Log Entry
-naLog_LogMessage_label=Log Entry
+naLog_LogMessage_description=Log
+naLog_LogMessage_label=Log
 naLog_LogMessage_naLog_log_label=Log
 naLog_LogMessage_naLog_log_tooltip=Log
 naLog_record_description=Record
-naLog_record_label=Record
+naLog_record_label=${property\:level} <${property\:element}> - ${property\:message}
 naLog_record_naLog_class_label=Class
 naLog_record_naLog_class_tooltip=Class
 naLog_record_naLog_element_label=Element
