--- a/trunk/KalypsoUIRRM/plugin.xml
+++ b/trunk/KalypsoUIRRM/plugin.xml
@@ -263,7 +263,7 @@
          point="org.eclipse.ui.views">
       <view
             category="org.kalypso.ui.kalypso"
-            class="org.kalypso.ui.rrm.logviewer.LogViewer"
+            class="org.kalypso.ui.rrm.internal.logviewer.LogViewer"
             icon="icons/logview/problems_view.gif"
             id="org.kalypso.ui.rrm.logviewer.LogViewer"
             name="%org.kalypso.ui.rrm.logviewer.LogViewer.name"/>
