--- a/KalypsoUIRRM/plugin.xml
+++ b/KalypsoUIRRM/plugin.xml
@@ -571,5 +571,49 @@
              style="push">
        </command>
     </menuContribution>
+    <menuContribution
+            allPopups="true"
+            locationURI="toolbar:org.kalypso.model.rrm.ui.zml.table.menu.toolbar.instantaneous">
+         <command
+               commandId="org.kalypso.zml.ui.table.commands.toolbar.view.all"
+               style="radio">
+         </command>
+         <command
+               commandId="org.kalypso.zml.ui.table.commands.toolbar.view.stuetzstellen"
+               style="radio">
+         </command>
+         <command
+               commandId="org.kalypso.zml.ui.table.commands.toolbar.view.6.hours"
+               style="radio">
+         </command>
+         <command
+               commandId="org.kalypso.zml.ui.table.commands.toolbar.view.12.hours"
+               style="radio">
+         </command>
+         <command
+               commandId="org.kalypso.zml.ui.table.commands.toolbar.view.24.hours"
+               style="radio">
+         </command>
+         <command
+               commandId="org.kalypso.zml.ui.table.commands.toolbar.view.hour.minus"
+               style="push">
+         </command>
+         <command
+               commandId="org.kalypso.zml.ui.table.commands.toolbar.view.hour.add"
+               style="push">
+         </command>
+          <separator
+               name="separator_instantaneous"
+               visible="true">
+         </separator>
+         <command
+               commandId="org.kalypso.zml.ui.table.commands.toolbar.view.data.sources"
+               style="toggle">
+         </command>
+         <command
+               commandId="org.kalypso.zml.ui.table.commands.toolbar.tooltip"
+               style="toggle">
+         </command>
+      </menuContribution>
  </extension>
 </plugin>
