--- a/KalypsoModelNA/etc/schema/gml/namodell.properties
+++ b/KalypsoModelNA/etc/schema/gml/namodell.properties
@@ -189,7 +189,7 @@ rrm_Node_rrm_qberechnetZR_label=Calculated discharge
 rrm_Node_rrm_qberechnetZR_tooltip=Calculated discharge line
 rrm_Node_rrm_riverCode_label=River Code
 rrm_Node_rrm_riverCode_tooltip=River Code
-rrm_Node_rrm_qqRelatedNode_label=QQ-Outflow
+rrm_Node_rrm_qqRelatedNode_label=Target Node
 rrm_Node_rrm_qqRelatedNode_tooltip=Target node of a Q to Q related outflow
 rrm_Node_rrm_qqRelation_label=QQ-Relationship
 rrm_Node_rrm_qqRelation_tooltip=Definition of the QQ-Outflow
